added many features to allow admins and chairman can edit the poll
added email notification

--- a/app/templates/besttime/poll-form.html
+++ b/app/templates/besttime/poll-form.html
@@ -6,6 +6,7 @@
     <div class="columns">
         <div class="column">
             <form method="post">
+                {{ form.hidden_tag() }}
                 <table class="table is-striped is-bordered">
                     {% for field in form.date_time_slots %}
                     <tr>
