--- a/app/templates/besttime/poll-results.html
+++ b/app/templates/besttime/poll-results.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% include "besttime/nav.html" %}
 {% block page_content %}
     <section class="section">
     {% include "messages.html" %}
