--- a/app/templates/besttime/poll-setup-form.html
+++ b/app/templates/besttime/poll-setup-form.html
@@ -5,6 +5,7 @@
     <link href="https://fastly.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://fastly.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 {% endblock %}
+{% include "besttime/nav.html" %}
 {% block page_content %}
 <section class="section">
     <h2 class="title is-size-4">Select A Date Range For A Poll</h2>
