--- a/app/templates/academic_services/confirm_sample_appointment_page.html
+++ b/app/templates/academic_services/confirm_sample_appointment_page.html
@@ -42,7 +42,7 @@
             delimiters: ['<%', '%>'],
             methods: {
                 printRequest: function () {
-                    printJS({{ url_for('academic_services.export_request_pdf', request_id=request_id)|tojson|safe }});
+                    printJS({{ url_for('academic_services.export_request_pdf', request_id=request_id, code=code)|tojson|safe }});
                 }
             },
         });
