--- a/app/templates/academic_services/result_index.html
+++ b/app/templates/academic_services/result_index.html
@@ -73,6 +73,7 @@
                     <th>เลขใบคำขอรับบริการ</th>
                     <th>หมายเลขติดตามพัสดุ</th>
                     <th>วัน-เวลาที่ออกผล</th>
+                    <th>ช่องทางรับผล</th>
                     <th>รายละเอียดการขอแก้ไข</th>
                     <th>สถานะ</th>
                     <th>ผลการทดสอบ</th>
@@ -83,6 +84,7 @@
                                 <td>{{ result.request.request_no }}</td>
                                 <td>{{ result.tracking_number or '' }}</td>
                                 <td>{{ result.sent_at|localdatetime or '' }}</td>
+                                <td>{{ result.request.report_receive_channel.item }}</td>
                                 <td>
                                     {%  for item in result.result_items|sort(attribute='sequence') %}
                                         {% if item.req_edit_at %}
