Edited bacteria_request_condition_form template, bacteria_request_form template, virus_air_disinfection_request_form teplate, virus_disinfection_request_condition_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/partials/bacteria_request_condition_form.html
+++ b/app/templates/academic_services/partials/bacteria_request_condition_form.html
@@ -212,6 +212,7 @@
             ;
         } else {
             surfaceTypeOtherField.hide();
+            surfaceTypeOtherInput.prop('required', false)
             surfaceTypeOtherInput.val('');
         }
     }
