--- a/app/templates/service_admin/forms/bacteria_request_form.html
+++ b/app/templates/service_admin/forms/bacteria_request_form.html
@@ -558,6 +558,7 @@
                 surfaceTypeOtherInput.prop('required', true);
             } else {
                 surfaceTypeOtherField.hide();
+                surfaceTypeOtherInput.prop('required', false)
                 surfaceTypeOtherInput.val('');
             }
         }
