--- a/app/templates/service_admin/partials/bacteria_request_condition_form.html
+++ b/app/templates/service_admin/partials/bacteria_request_condition_form.html
@@ -210,6 +210,7 @@
             surfaceTypeOtherInput.prop('required', true);
         } else {
             surfaceTypeOtherField.hide();
+            surfaceTypeOtherInput.prop('required', false)
             surfaceTypeOtherInput.val('');
         }
     }
