Edited icon of report_receive_channel in create_quotation_for_admin template and view_request template at academic_services templates

--- a/app/templates/service_admin/view_request.html
+++ b/app/templates/service_admin/view_request.html
@@ -194,7 +194,7 @@
                         </div>
                         <div class="mb-4">
                             <p class="subtitle is-6 mb-1 has-text-weight-semibold">
-                                <span class="icon"><i class="fas fa-file-alt"></i></span> ช่องทางการรับใบรายงานผล
+                                <span class="icon"><i class="fa-solid fa-inbox"></i></span> ช่องทางการรับใบรายงานผล
                             </p>
                             <div class="content" style="margin-left: 1.75rem;">
                                 <ul>
