fixed swapping datetime slots fields problem

--- a/app/templates/besttime/datetime_slots_preview.html
+++ b/app/templates/besttime/datetime_slots_preview.html
@@ -1,14 +1,13 @@
 Please uncheck a timeslot that you don't want to display in your poll.
 {% for field in form.datetime_slots %}
-    <tr>
-        <td>
-            {{ field.csrf_token }}
-            <div class="field">
-                <div class="control">
-                    {{field.date(type="text", readonly=True)}}
-                    {{field.time_slots()}}
-                </div>
-            </div>
-        </td>
-    </tr>
+    <div class="field has-thin-border">
+        {{ field.csrf_token }}
+        <label class="label">
+            {{ field.date.data.strftime('%-d %a %b %Y') }}
+        </label>
+        <div class="control">
+            {{field.date(type="hidden")}}
+            {{field.time_slots()}}
+        </div>
+    </div>
 {% endfor %}
