--- a/app/templates/academic_services/lab_index.html
+++ b/app/templates/academic_services/lab_index.html
@@ -114,7 +114,7 @@
             })
         })
 
-        function showToast() {
+        function showToast(category, message) {
             toastr.options = {
                 "closeButton": false,
                 "debug": false,
@@ -128,16 +128,20 @@
                 "showMethod": "fadeIn",
                 "hideMethod": "fadeOut"
             };
-            toastr.success('บันทึกข้อมูลเรียบร้อยแล้ว กรุณาเลือกแล็บ');
+            if (category === 'success') {
+                toastr.success(message);
+            } else if (category === 'danger') {
+                toastr.error(message);
+            } else {
+                toastr.info(message);
+            }
         }
 
         document.addEventListener('DOMContentLoaded', () => {
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     {% for category, message in messages %}
-                        {% if category == 'customer_updated' %}
-                            showToast({{ message|tojson }}, 7000);
-                        {% endif %}
+                        showToast('{{ category }}', {{ message|tojson }});
                     {% endfor %}
                 {% endif %}
             {% endwith %}
